# php-rpm

./: .travis.yml  Cargo.toml  README-EMBED.md  README.md  build.rs  wrapper.h
.travis/: install-php.sh
php-sys/: Cargo.toml  README.md  build.rs
src/: main.rs  sapi.rs  shim.c
tests/: index.php  plaintext.php
