[package]
name = "php-rpm"
version = "0.1.0"
authors = ["Herman J. Radtke III <herman@hermanradtke.com>"]

[dependencies]
log = "0.3"
env_logger = "0.3"
clap = "2.26"
yansi = "0.3"
hyper = "0.11"
futures = "0.1"
futures-cpupool = "0.1"
php-sys = { version = "0.1", path = "php-sys" }
num_cpus = "1.6"

[build-dependencies]
gcc = "0.3"
